--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ body {
     text-align: left;
 }
 
+footer {
+    background-color: beige;
+}
+
 @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
