--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,13 @@ body {
 
 .section {
     margin: 1em auto;
+    padding: .5em;
     max-width: 90%;
     text-align: left;
+}
+
+.interest-section {
+    padding-bottom: 2em;
 }
 
 footer {
